add tag model, api , auto-tagging
